--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 
       #data li {
         list-style: none;
-        margin: 10px -50px 0;
+        margin: 10px -45px 0;
         padding: 0;
         text-align: left;
       }
@@ -107,6 +107,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="./js/angular-facebook.min.js"></script>
     <script src="./js/socket.io.js"></script>
+    <script src="./js/socket.js"></script>
+    <script src="./js/app.js"></script>
+
   </head>
 
   <body ng-controller="con" ng-init="checkFB()">
@@ -129,69 +132,20 @@
       User Online (<a id="online"></a>)
       ___________________________________<br>
       <div>
-        <ul id="data"></ul>
+        <ul ng-repeat="datas in data" id="data">
+          <li><img ng-src="{{datas.avatar}}"> <a href="http://fb.com/{{datas.name}}"> {{datas.name}} </a> : {{datas.score}}</li>
+        </ul>
       </div>
     </div>
 
     <footer>
       <a href="https://who-ami.herokuapp.com/">K I R I N</a>
-      <br>Used <a href="https://www.google.com/intl/th/chrome/browser/desktop/">Google Chrome </a>Only Power by <a href="http://heroku.com/">Heroku</a> &copy; 2016
+      <br>Support Browser <a href="https://www.google.com/intl/th/chrome/browser/desktop/">Google Chrome </a>Only • Power by <a href="http://heroku.com/">Heroku</a> &copy; 2016
     </footer>
 
 <img ng-src="{{datas.picture.data.url}}"><a href='http://fb.com/{{datas.id}}' target='_blank'>{{datas.name}}</a>
   <script>
-    var socket = io();
-    var app = angular.module('app', ['facebook'])
-    app.config(function(FacebookProvider) {
-      FacebookProvider.init('573083182871799');
-    })
-
-    app.controller('con', function($scope, Facebook) {
-
-    socket.on('login', function(data){
-      data.sort($scope.sort);
-      var display;
-      for(var i=0;i<data.length;i++){
-        //http://www.devcurry.com/2010/05/sorting-json-array.html
-        display =+ "<li><img src='"+data[i].avatar+"'/><a href='http://fb.com/"+data[i].id+"' target='_blank'>"+data[i].name+"</a> : "+data[i].score+"</li>";
-        //$('#data').append("<li><img src='"+data[i].avatar+"'/><a href='http://fb.com/"+data[i].id+"' target='_blank'>"+data[i].name+"</a> : "+data[i].score+"</li>");  // recieve
-      }
-      $('#data').html(display);
-    });
-
-    $scope.sort = function(x,y) {
-      return x.score - y.score; 
-    }
-    $scope.checkFB = function(){
-      Facebook.getLoginStatus(function(response) {
-        if(response.status === 'connected') {
-          $scope.login();
-        }
-      });
-    }
-    $scope.login = function() {
-      // From now on you can use the Facebook service just as Facebook api says
-      Facebook.login(function(response) {
-        // Do something with response.
-        if(response.status === 'connected') {
-          $scope.loggedIn = true;
-          $scope.me();
-          socket.on('online',function(online){
-            document.getElementById("online").innerHTML = online;
-          });
-        } else {
-          $scope.loggedIn = false;
-        }
-      });
-    };
-    $scope.me = function() {
-      Facebook.api('/me?fields=id,name,picture', function(response) {
-        $scope.user = response;
-        socket.emit('login', $scope.user); // send
-        
-      });
-    };
-  });
+    
   </script>
   </body>
 </html>
