--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,6 @@
         height: 550px;
         border-top: 5px solid #03A9F4;
         position: absolute;
-        width: 460px;
         right: 0;
       }
       footer{
@@ -187,6 +186,20 @@
         text-shadow: 0 0 50px;
         -webkit-transition: all 1s linear;
       }
+      .characters{
+        width: 460px;
+        margin: 0 auto;
+      }
+      .box{
+        height: 440px;
+        overflow: hidden;
+      }
+      #ch{
+        text-align: center;
+        position: absolute;
+        z-index: 3;
+        width: 100%;
+      }
     </style>
     
   </head>
@@ -204,7 +217,11 @@
     </div>
     <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
       <div id="board" ng-show="loggedIn">
-          
+        <div class="box">
+          <img class="characters" src="{{characters.avatar}}">
+            <div id="ch" style="bottom:7px;"><button ng-click="answer(characters.choice[0])"class="btn">{{characters.choice[0]}}</button></div>
+            <div id="ch" style="bottom:55px;"><button ng-click="answer(characters.choice[1])" class="btn">{{characters.choice[1]}}</button></div>
+        </div>
       </div>
     </div>
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
@@ -212,10 +229,10 @@
         <div class="demo-list-action mdl-list">
           <div class="mdl-list__item">
             <span class="mdl-list__item-primary-content">
-              <img class="material-icons mdl-list__item-avatar" ng-src="{{user.picture.data.url}}">
+              <img class="material-icons mdl-list__item-avatar" ng-src="{{user.avatar}}">
               <span><a href='http://fb.com/{{user.id}}' target='_blank'>{{user.name}}</a></span>
             </span>
-            <a class="mdl-list__item-secondary-action" href="#">999</a>
+            <a class="mdl-list__item-secondary-action" href="#">{{score}}</a>
           </div>
         </div>
       </div>
@@ -231,7 +248,7 @@
               <img class="material-icons mdl-list__item-avatar" ng-src="{{datas.avatar}}">
               <span><a href="http://fb.com/{{datas.id}}" target="_blank"> {{datas.name}} </a></span>
             </span>
-            <span class="mdl-badge" data-badge="999"></span>
+            <span class="mdl-badge" data-badge="{{datas.score}}"></span>
           </div>
         </div>
       </div>
