--- a/public/index.html
+++ b/public/index.html
@@ -243,7 +243,7 @@
         </div>
           
         <div class="demo-list-action mdl-list">
-          <div class="mdl-list__item" ng-repeat="datas in data">
+          <div class="mdl-list__item" ng-repeat="datas in data | orderBy:-score">
             <span class="mdl-list__item-primary-content">
               <img class="material-icons mdl-list__item-avatar" ng-src="{{datas.avatar}}">
               <span><a href="http://fb.com/{{datas.id}}" target="_blank"> {{datas.name}} </a></span>
