--- a/public/index.html
+++ b/public/index.html
@@ -200,6 +200,11 @@
         z-index: 3;
         width: 100%;
       }
+      #scroll{
+        overflow: hidden;
+        overflow-y: scroll;
+        height: 460px;
+      }
     </style>
     
   </head>
@@ -242,8 +247,8 @@
           <span>User Online ( <a>{{online}}</a> )</span>
         </div>
           
-        <div class="demo-list-action mdl-list">
-          <div class="mdl-list__item" ng-repeat="datas in data | orderBy:-score">
+        <div class="demo-list-action mdl-list" id="scroll">
+          <div class="mdl-list__item" ng-repeat="datas in data | orderBy:'-score'">
             <span class="mdl-list__item-primary-content">
               <img class="material-icons mdl-list__item-avatar" ng-src="{{datas.avatar}}">
               <span><a href="http://fb.com/{{datas.id}}" target="_blank"> {{datas.name}} </a></span>
