--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       <img id="press_start_btn" src="./images/pres_start.png" ng-click="startGame()">
     </div>
     <div id="game_over" ng-hide="!over">
-      <p><button class="btn" ng-click="continue()">Continue?</button></p>
+      <p><button class="btn" ng-click="continue()">try again?</button></p>
       <p><button class="btn" ng-click="postFB()">Post Score</button></p>
     </div>
 
