--- a/public/index.html
+++ b/public/index.html
@@ -101,15 +101,15 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
 
-    // $(document).on("contextmenu",function(e){
-    //   e.preventDefault();
-    // });
-    // $(document).keydown(function(event){
-    //   if(event.keyCode==123)
-    //     return false;
-    //   else if(event.ctrlKey && event.shiftKey && event.keyCode==73)
-    //     return false;  //Prevent from ctrl+shift+i
-    // });
+    $(document).on("contextmenu",function(e){
+      e.preventDefault();
+    });
+    $(document).keydown(function(event){
+      if(event.keyCode==123)
+        return false;
+      else if(event.ctrlKey && event.shiftKey && event.keyCode==73)
+        return false;  //Prevent from ctrl+shift+i
+    });
     </script>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
