--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
     </div>
     <footer>
       <a href="https://who-ami.herokuapp.com/">K I R I N</a>
-      <br>Support Browser <a href="https://www.google.com/intl/th/chrome/browser/desktop/">Google Chrome </a>Only • Power by <a href="http://heroku.com/">Heroku</a> &copy; 2016
+      <br>Support Browser <a href="https://www.google.com/intl/th/chrome/browser/desktop/">Google Chrome </a>Only • Power by <a href="http://heroku.com/">Heroku</a> &copy; 2016 <script type="text/javascript" language="javascript1.1" src="http://tracker.stats.in.th/tracker.php?sid=68684"></script><noscript><a target="_blank" href="http://www.stats.in.th/">www.Stats.in.th</a></noscript>
     </footer>
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
