--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,12 @@
     </div>
     <footer>
       <a href="https://who-ami.herokuapp.com/">K I R I N</a>
-      <br>Support Browser <a href="https://www.google.com/intl/th/chrome/browser/desktop/">Google Chrome </a>Only • Power by <a href="http://heroku.com/">Heroku</a> &copy; 2016 <script type="text/javascript" language="javascript1.1" src="http://tracker.stats.in.th/tracker.php?sid=68684"></script><noscript><a target="_blank" href="http://www.stats.in.th/">www.Stats.in.th</a></noscript>
+      <br>Support Browser <a href="https://www.google.com/intl/th/chrome/browser/desktop/">Google Chrome </a>Only • Power by <a href="http://heroku.com/">Heroku</a> &copy; 2016 <noscript><a target="_blank" href="http://www.stats.in.th/">www.Stats.in.th</a></noscript>
+      <!-- Histats.com  START (html only)-->
+      <a href="/" alt="page hit counter" target="_blank" >
+      <embed src="http://s10.histats.com/1041.swf"  flashvars="jver=1&acsid=3516880&domi=4"  quality="high"  width="200" height="30" name="1041.swf"  align="middle" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" wmode="transparent" /></a>
+      <img  src="//sstatic1.histats.com/0.gif?3516880&101" alt="" border="0">
+      <!-- Histats.com  END  -->
     </footer>
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
@@ -149,5 +154,6 @@
       })();
     </script>
     <!-- PopAds.net Popunder Code End-->
+    <script type="text/javascript" language="javascript1.1" src="//tracker.stats.in.th/tracker.php?sid=68684"></script>
   </body>
 </html>
