--- a/public/index.html
+++ b/public/index.html
@@ -92,10 +92,18 @@
     <footer>
       <a href="https://who-ami.herokuapp.com/">K I R I N</a>
       <br>Support Browser <a href="https://www.google.com/intl/th/chrome/browser/desktop/">Google Chrome </a>Only • Power by <a href="http://heroku.com/">Heroku</a> &copy; 2016 <noscript><a target="_blank" href="http://www.stats.in.th/">www.Stats.in.th</a></noscript>
-      <!-- Histats.com  START (html only)-->
-      <a href="/" alt="page hit counter" target="_blank" >
-      <embed src="http://s10.histats.com/1041.swf"  flashvars="jver=1&acsid=3516880&domi=4"  quality="high"  width="200" height="30" name="1041.swf"  align="middle" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" wmode="transparent" /></a>
-      <img  src="//sstatic1.histats.com/0.gif?3516880&101" alt="" border="0">
+      <!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
+      <!-- Histats.com  START  (aync)-->
+      <script type="text/javascript">var _Hasync= _Hasync|| [];
+      _Hasync.push(['Histats.start', '1,3516880,4,1041,200,30,00010000']);
+      _Hasync.push(['Histats.fasi', '1']);
+      _Hasync.push(['Histats.track_hits', '']);
+      (function() {
+      var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+      hs.src = ('//s10.histats.com/js15_as.js');
+      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+      })();</script>
+      <noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?3516880&101" alt="" border="0"></a></noscript>
       <!-- Histats.com  END  -->
     </footer>
     <div id="fb-root"></div>
