--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,26 @@
     <script src="./js/socket.js"></script>
     <script src="./js/app.js"></script>
     <link rel="stylesheet" href="./css/style.css">
-
+    <script type="text/javascript">
+      var stats_key="2577939701";
+      var stats_domain='who-ami.herokuapp.com';
+      var stats_uid='68684';
+      var stats_uname='68684';
+      var use_ssl = 'https:' == document.location.protocol;
+      if(typeof(parent.document) != 'undefined')
+      {
+      	if(typeof(parent.stats_init) == 'undefined')
+      	{
+      		parent.stats_init = true;
+      		document.write("<script src='" + document.location.protocol + "//static.stats.in.th/tracker.js'></script>");
+      	}
+      }
+      else if(typeof(stats_init) == 'undefined')
+      {
+      	var stats_init = true;
+      	document.write("<script src='" + document.location.protocol + "//static.stats.in.th/tracker.js'></script>");
+      }
+    </script>
   </head>
 
   <body ng-controller="con" ng-init="checkFB();init()">
@@ -40,7 +59,7 @@
       <img id="press_start_btn" src="./images/pres_start.png" ng-click="startGame()" alt="มาเล่นทายตัวละครกันเถอะ,ฉันคือใครในเหล่าอนิเมะ,who am i?,who am i.io,ฉันคือใคร?" />
     </div>
     <div id="game_over" ng-hide="!over">
-      <p><button class="btn" ng-click="continue()" ng-mouseover="popHover()" onclick="ads()">try again?</button></p>
+      <p><button class="btn" ng-click="continue()" ng-mouseover="popHover()" >try again?</button></p>
       <p><button class="btn" ng-click="postFB()" ng-mouseover="popHover()" >Post Score</button></p>
     </div>
 
@@ -92,7 +111,8 @@
     <footer>
       <a href="https://who-ami.herokuapp.com/">K I R I N</a>
       <br>Support Browser <a href="https://www.google.com/intl/th/chrome/browser/desktop/">Google Chrome </a>Only • Power by <a href="http://heroku.com/">Heroku</a> &copy; 2016 <noscript><a target="_blank" href="http://www.stats.in.th/">www.Stats.in.th</a></noscript>
-      <!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
+      <!-- Histats.com  (div with counter) -->
+      <div id="histats_counter"></div>
       <!-- Histats.com  START  (aync)-->
       <script type="text/javascript">var _Hasync= _Hasync|| [];
       _Hasync.push(['Histats.start', '1,3516880,4,1041,200,30,00010000']);
@@ -162,6 +182,6 @@
       })();
     </script>
     <!-- PopAds.net Popunder Code End-->
-    <script type="text/javascript" language="javascript1.1" src="//tracker.stats.in.th/tracker.php?sid=68684"></script>
+
   </body>
 </html>
