--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
     <footer>
       <a href="https://who-ami.herokuapp.com/">K I R I N</a>
       <br>Support Browser <a href="https://www.google.com/intl/th/chrome/browser/desktop/">Google Chrome </a>Only • Power by <a href="http://heroku.com/">Heroku</a> &copy; 2016
-      <script type="text/javascript" language="javascript1.1" src="http://tracker.stats.in.th/tracker.php?sid=68684"></script><noscript><a target="_blank" href="http://www.stats.in.th/">www.Stats.in.th</a></noscript>
+      <script type="text/javascript" language="javascript1.1" src="//tracker.stats.in.th/tracker.php?sid=68684"></script><noscript><a target="_blank" href="http://www.stats.in.th/">www.Stats.in.th</a></noscript>
       <!-- Histats.com  (div with counter) -->
       <div id="histats_counter"></div>
       <!-- Histats.com  START  (aync)-->
